# prefect-forecaster-pipeline

./: .gitignore  main.py  pyproject.toml
flows/: feature_engineering.py  forecast_flow.py
output/: .gitignore
tasks/: data.py  ensemble.py  evaluate.py  feature_engineering.py  forecast.py  model.py  preprocess.py  visualization.py
test/: csv_md.py  csv_table.py
util/: markdown.py  ramadhan.py
