[project]
name = "prefect-forecaster-sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "prefect>=3.4.1",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
]
